base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kargo-demo
spec:
  type: ClusterIP
  selector:
    app: kargo-demo
  ports:
  - protocol: TCP
    targetPort: 8080
    port: 80
    name: http
